--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
   }
 body {
-
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: var(--primary-color);
@@ -62,7 +62,7 @@ nav {
     height: 75px;
     z-index: 3;
 
-
+    transition: all .4s;
     list-style: none;
 
 }
@@ -76,10 +76,14 @@ nav {
     color: var(--black);
     font-weight: 900;
     font-size: 16px;
+    
 }
 
 .active, .nav-links li:hover{
-    text-shadow: 0px 1px 1px rgb(255, 255, 255);
+    transition: all .4s;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    margin-right: 10px;
+    margin-left: 10px;
 
 }
 
@@ -87,18 +91,6 @@ nav {
     display: none;
 }
 
-.nav-links li:hover .sub-nav-1{
-    width: 100%;
-    border-radius: 5px;
-    justify-content: center;
-    
-    display: block;
-    position: absolute;
-    background-color: var(--secondary-color);
-    margin-top: 20px;
-
-    
-}
 
 .nav-links li:hover .sub-nav-1 li{
     width: 100%;
@@ -121,8 +113,8 @@ nav {
     height: 5px;
     background-color: var(--black);
     margin: 5px;
- 
 }
+
 @media screen and (max-width:768px) {
     .nav-links {
         width: 60%;
@@ -192,7 +184,7 @@ transform: translateX(0px);
     text-align: center;
     padding-top: 10px;
     background-color:var(--primary-color);
-
+    min-height: 100%;
 
 }
 
@@ -207,6 +199,13 @@ transform: translateX(0px);
     padding-top: 25px;
     padding-bottom: 25px;
     text-align: center;
+}
+
+.content2 {
+    border-top: 1px solid var(--grey);
+    margin-top: 1%;
+    display: flex;
+    justify-content: space-between;
 }
 .content {
     border-top: 1px solid var(--grey);
@@ -231,6 +230,7 @@ transform: translateX(0px);
     margin: 10px 0;
 }
 .okienko {
+    transition: all 1s;
     overflow: hidden;
     flex-basis: 31%;
     border-radius: 10px;
@@ -252,11 +252,11 @@ transform: translateX(0px);
     line-height: 28px;
     font-family: 15px;
 }
-.okienko a:hover {
-    border-radius: 10px;
-    box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.7);
-}
+
 .okienko:hover{
+    transition: all .2s;
+    width: 100%;
+    
     box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.7);
 }
 .imgs {
@@ -317,6 +317,7 @@ transform: translateX(0px);
     text-align: center;
     width: 100%;
     height: 500px;
+    transition: all 1s;
 }
 
 .okienko2 p{
@@ -326,8 +327,7 @@ transform: translateX(0px);
     font-family: 15px;
 }
 .okienko2 a:hover {
-    box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
+    transition: all .2s;
 }
 .okienko2:hover{
     box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.7);
@@ -356,6 +356,7 @@ transform: translateX(0px);
 }
 
 .read-more {
+    transition: all s;
     border-radius: 15px;
     background-position: bottom;
     margin-left:-12%;
@@ -372,6 +373,7 @@ transform: translateX(0px);
 
 
 .read-more:hover {
+    transition: all .2s;
     box-shadow: 0px 5px 5px black;
 }
 
@@ -571,43 +573,133 @@ transform: translateX(0px);
 .footer {
     border-radius: 15px;
     margin-top: 15px;
-    background-color: var(--grey);
+    background-color: rgb(122, 122, 122);
     color: var(--primary-color);
-    height: 200px;
+    height: 400px;
     position: relative;
     box-shadow: 00px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .footer .footer-content  {
 
-    height: 190px;
+    
+    height: 400px;
     display: flex;
 }
+.footer .footer-content .about .contact span{
+    display: block;
+    font-size: 1.1em;
+    margin-bottom: 0px;
+}
 
+.footer .footer-content .about .socials a {
+    border: 1px solid var(--grey);
+    width: 45px;
+    height: 41px;
+    padding-top: 5px;
+    margin-right: 5px;
+    text-align: center;
+    display: inline-block;
+    font-size: 1.3em;
+}
+.footer .footer-content .about .socials a:hover{
+    border: 1px solid var(--primary-color);
+    transition: all .3s;
+}
+.contact{
+    padding-top: 5px;
+}
+
+.socials {
+    background-image: url("facebook.png");
+    width: 100px;
+}
+
+.footer .footer-content .links ul a{
+    color: var(--grey);
+    text-decoration: none;
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    transition: all .3s;
+}
+
+.footer .footer-content .links ul a:hover {
+    color: var(--primary-color);
+    margin-left: 15px;
+    transition: all .3s;
+}
+
+.footer .footer-content .contact-form .contact-input {
+    background: rgb(92, 92, 92) ;
+    color: var(--primary-color);
+    margin-bottom: 10px;
+    line-height: 1.5rem;
+    padding: .7rem 1.2rem;
+    border: none;
+}
+
+.footer .footer-content .contact-form .contact-input:focus {
+    background: rgb(46, 46, 46);
+}
+
+.btn-big {
+    padding: .7rem 1.3rem;
+    line-height: 1.3rem;
+
+}
+
+.footer .footer-content .contact-form .contact-btn {
+    float: right;
+}
+.linki{
+    font-size: 0.9em;
+    padding-top: 20px;
+    color: var(--primary-color);
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.about-logo{
+    font-size: 20px;
+
+}
+
+.yellow-about-logo{
+    color: var(--secondary-color);
+}
 .footer .footer-content .footer-section {
     flex: 1;
     padding: 25px;
     border: 1px solid white;
-}
-.footer-section h5{
-    margin-top: -25px;
-    text-align: center;
-}
 
-.footer-section .h5extra{
-    font-size: 12px;
-    margin-top: -0px;
-    text-align: center;
 }
 .footer .footer-bottom {
-z-index: 0;
-    background-color: rgb(146, 146, 146) ;
-    color: var(--primary-color);
+
+    background-color: rgb(92, 92, 92) ;
+    color: rgb(172, 172, 172);
     height: 50px;
     width: 100%;
     text-align: center;
     position: absolute;
     bottom: 0px;
     left: 0px;
-    padding-top: 20px;
+    padding-top: 10px;
+}
+
+.img-contact {
+    transition: all .3s;
+    width: 70px;
+    height: 50px;
+}
+
+.logofacebook {
+    text-decoration: none;
+    list-style-type: none;
+}
+
+.img-contact:hover {
+    transition: all .3s;
+    width: 80px;
+    height: 55px;
 }
